--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "start": "node index.js",
-    "watch": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start:prod": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/OhtuGrappa2/back-grappa2#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.15.4",
-    "nodemon": "~1.12.0"
+    "nodemon": "~1.12.0",
+    "sinon": "^3.2.1"
   },
   "devDependencies": {
     "ava": "^0.22.0",
