--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "enzyme": "^2.9.1",
+    "ignore-styles": "^5.0.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1"
   },
@@ -72,7 +73,8 @@
     "tap": true,
     "powerAssert": false,
     "require": [
-      "babel-register"
+      "babel-register",
+      "ignore-styles"
     ],
     "babel": "inherit"
   },
