--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "coveralls": "^2.13.1"
+    "coveralls": "^2.13.1",
+    "supertest": "^3.0.0"
   },
   "ava": {
     "files": [
