--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "enzyme": "^2.9.1",
     "ignore-styles": "^5.0.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
     "react-test-renderer": "^15.6.1"
   },
   "scripts": {
