--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ignore-styles": "^5.0.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-test-renderer": "^15.6.1"
   },
   "scripts": {
