--- a/package.json
+++ b/package.json
@@ -51,13 +51,15 @@
     "babel-register": "^6.26.0",
     "enzyme": "^2.9.1",
     "ignore-styles": "^5.0.1",
+    "nyc": "^11.2.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 ava"
+    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 nyc ava",
+    "report": "nyc report --reporter=html"
   },
   "ava": {
     "files": [
@@ -77,6 +79,16 @@
       "ignore-styles"
     ],
     "babel": "inherit"
+  },
+  "babel": {
+    "presets": ["es2015"],
+    "plugins": ["transform-runtime"],
+    "ignore": "test.js",
+    "env": {
+      "development": {
+        "sourceMaps": "inline"
+      }
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
