--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ava",
+    "test": "nyc ava",
     "start": "node index.js",
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "build": "BABEL_ENV=production babel --out-dir=dist index.js",
+    "report": "nyc report --reporter=html"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,8 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "coveralls": "^2.13.1"
+    "coveralls": "^2.13.1",
+    "nyc": "^11.2.1"
   },
   "ava": {
     "files": [
@@ -46,5 +49,19 @@
       "babel-register"
     ],
     "babel": "inherit"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "transform-runtime"
+    ],
+    "ignore": "test.js",
+    "env": {
+      "development": {
+        "sourceMaps": "inline"
+      }
+    }
   }
 }
