--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "promise": "8.0.1",
     "react": "^15.6.1",
     "react-dev-utils": "^4.0.1",
+    "semantic-ui-react": "^0.73.0",
     "sinon": "^3.2.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
