--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "scripts": {
     "start": "API_URL=http://localhost:3100 node scripts/start.js",
-    "build": "API_URL=http://localhost:3100 node scripts/build.js",
+    "build": "node scripts/build.js",
     "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 nyc ava",
     "report": "nyc report --reporter=html",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
