--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "build": "API_URL=/api/ node scripts/build.js",
     "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 nyc ava",
     "report": "nyc report --reporter=html",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint ./**/*.js || true"
   },
   "ava": {
     "files": [
@@ -99,6 +100,7 @@
     }
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "parserOptions": { "ecmaVersion": 6 }
   }
 }
