--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon index.js",
     "start:prod": "node index.js",
     "build": "BABEL_ENV=production babel --out-dir=dist index.js",
-    "report": "nyc report --reporter=html"
+    "report": "nyc report --reporter=html",
+    "lint": "eslint ./**/*.js || true"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "coveralls": "^2.13.1",
+    "eslint": "^4.7.1",
     "nyc": "^11.2.1",
     "supertest": "^3.0.0"
   },
@@ -66,6 +68,11 @@
       "development": {
         "sourceMaps": "inline"
       }
+    }
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 6
     }
   }
 }
