--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "knex": "^0.13.0",
     "nodemon": "~1.12.0",
-    "sinon": "^3.2.1"
+    "pg": "^7.3.0",
+    "sinon": "^3.2.1",
+    "sqlite3": "^3.1.12"
   },
   "devDependencies": {
     "ava": "^0.22.0",
