--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "express": "^4.15.4",
-    "nodemon": "~1.12.0",
-    "sinon": "^3.2.1"
+    "express": "^4.15.4"
   },
   "devDependencies": {
     "ava": "^0.22.0",
@@ -35,7 +33,9 @@
     "babel-register": "^6.26.0",
     "coveralls": "^2.13.1",
     "eslint": "^4.7.1",
+    "nodemon": "~1.12.0",
     "nyc": "^11.2.1",
+    "sinon": "^3.2.1",
     "supertest": "^3.0.0"
   },
   "ava": {
