--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "promise": "8.0.1",
     "react": "^15.6.1",
     "react-dev-utils": "^4.0.1",
+    "react-dropzone": "^4.1.3",
     "semantic-ui-react": "^0.73.0",
     "sinon": "^3.2.1",
     "style-loader": "0.18.2",
