--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
       "!dist/**/*"
     ],
     "concurrency": 5,
-    "failFast": true,
+    "failFast": false,
     "failWithoutAssertions": false,
     "tap": true,
     "powerAssert": false,
