--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^4.7.1",
     "nodemon": "~1.12.0",
     "nyc": "^11.2.1",
+    "reqres": "^2.0.0",
     "sinon": "^3.2.1",
     "supertest": "^3.0.0"
   },
