Basic email functionality

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "knex": "^0.13.0",
+    "nodemailer": "^4.3.1",
     "pg": "^7.3.0",
     "sqlite3": "^3.1.12"
   },
