--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "ava": "^0.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "coveralls": "^2.13.1",
@@ -62,20 +63,6 @@
       "babel-register"
     ],
     "babel": "inherit"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "transform-runtime"
-    ],
-    "ignore": "test.js",
-    "env": {
-      "development": {
-        "sourceMaps": "inline"
-      }
-    }
   },
   "eslintConfig": {
     "parserOptions": {
