--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "knex": "^0.13.0",
     "nodemailer": "^4.4.0",
     "pg": "^7.3.0",
-    "sqlite3": "^3.1.12"
+    "sqlite3": "^3.1.12",
+    "xmlbuilder": "^9.0.4"
   },
   "devDependencies": {
     "ava": "^0.22.0",
