--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.1",
+    "bookshelf": "^0.12.0",
     "busboy": "^0.2.14",
     "express": "^4.15.4",
     "knex": "^0.13.0",
