--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bookshelf": "^0.12.0",
     "busboy": "^0.2.14",
     "express": "^4.15.4",
+    "form-data": "^2.3.1",
     "knex": "^0.13.0",
     "nodemailer": "^4.4.0",
     "pg": "^7.3.0",
