--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:prod": "node index.js",
     "db:migrate": "knex --knexfile ./src/db/knexfile.js --cwd . migrate:latest",
     "db:seed": "knex --knexfile ./src/db/knexfile.js --cwd . seed:run",
+    "db:remove": "rm ./src/db/grappa2db.sqlite",
     "build": "BABEL_ENV=production babel --out-dir=dist index.js",
     "report": "nyc report --reporter=html",
     "lint": "eslint ./**/*.js || true"
