--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:migrate": "knex --knexfile ./src/db/knexfile.js --cwd . migrate:latest",
     "db:seed": "knex --knexfile ./src/db/knexfile.js --cwd . seed:run",
     "db:remove": "rm ./src/db/grappa2db.sqlite",
+    "db:reset": "rm ./src/db/grappa2db.sqlite && knex --knexfile ./src/db/knexfile.js --cwd . migrate:latest && knex --knexfile ./src/db/knexfile.js --cwd . seed:run",
     "build": "BABEL_ENV=production babel --out-dir=dist index.js",
     "report": "nyc report --reporter=html",
     "lint": "eslint ./**/*.js || true"
