--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "knex": "^0.13.0",
     "nodemailer": "^4.4.0",
     "pg": "^7.3.0",
+    "request": "^2.83.0",
     "sqlite3": "^3.1.12",
     "xmlbuilder": "^9.0.4"
   },
