--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "busboy": "^0.2.14",
     "connect-session-knex": "^1.4.0",
     "express": "^4.15.4",
+    "express-fileupload": "^0.3.0",
     "express-session": "^1.15.6",
     "form-data": "^2.3.1",
     "knex": "^0.13.0",
