--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.15.6",
     "form-data": "^2.3.1",
     "knex": "^0.13.0",
+    "multer": "^1.3.0",
     "nodemailer": "^4.4.0",
     "pg": "^7.3.0",
     "request": "^2.83.0",
