--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/OhtuGrappa2/back-grappa2#readme",
   "dependencies": {
-    "adm-zip": "^0.4.7",
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -39,6 +38,7 @@
     "express-fileupload": "^0.3.0",
     "express-session": "^1.15.6",
     "form-data": "^2.3.1",
+    "jszip": "^3.1.5",
     "knex": "^0.13.0",
     "multer": "^1.3.0",
     "nodemailer": "^4.4.0",
