--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pg": "^7.3.0",
     "request": "^2.83.0",
     "sqlite3": "^3.1.12",
+    "xml2js": "^0.4.19",
     "xmlbuilder": "^9.0.4"
   },
   "devDependencies": {
