--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.1",
     "bookshelf": "^0.12.0",
+    "bookshelf-validate": "^2.0.3",
     "busboy": "^0.2.14",
     "connect-session-knex": "^1.4.0",
     "express": "^4.15.4",
