--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "connect-session-knex": "^1.4.0",
     "express": "^4.15.4",
     "express-fileupload": "^0.3.0",
+    "express-graceful-exit": "^0.4.0",
     "express-session": "^1.15.6",
     "form-data": "^2.3.1",
     "jszip": "^3.1.5",
