move controller tests to backlog

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   },
   "ava": {
     "files": [
-      "test/**/*.js"
+      "test/**/*.spec.js"
     ],
     "source": [
       "**/*.{js,jsx}",
