--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     },
     "rules": {
         "indent": ["error", 4],
-        "semi": ["error", "always"]
+        "semi": ["error", "always"],
+        "space-before-function-paren": ["error", "never"]
     }
 }
