--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-datepicker": "^0.60.2",
     "react-dom": "^16.2.0",
