--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dev-utils": "^4.2.1",
     "react-test-renderer": "^16.2.0",
     "redux-ava": "^2.2.0",
+    "redux-mock-store": "^1.4.0",
     "sinon": "^4.1.3",
     "webpack-dev-server": "2.9.4"
   },
