--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jszip": "^3.1.5",
     "knex": "^0.13.0",
     "multer": "^1.3.0",
+    "node-pdftk": "^1.2.1",
     "nodemailer": "^4.4.0",
     "pg": "^7.3.0",
     "request": "^2.83.0",
