--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test nyc ava -s",
+    "test": "NODE_ENV=test nyc ava -s -t",
     "start": "NODE_ENV=dev TEST_MAIL=grabbarobot EMAIL_HOST=gmail.com MAIL_PSWD=grabbasalasana nodemon index.js",
     "start:win": "nodemon index.js",
     "start:prod": "node index.js",
@@ -80,7 +80,7 @@
     "concurrency": 0,
     "failFast": true,
     "failWithoutAssertions": false,
-    "tap": true,
+    "tap": false,
     "powerAssert": false,
     "require": [
       "babel-register"
