--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.18.1",
     "bookshelf": "^0.12.0",
     "busboy": "^0.2.14",
+    "checkit": "^0.7.0",
     "connect-session-knex": "^1.4.0",
     "express": "^4.15.4",
     "express-fileupload": "^0.3.0",
