--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nyc": "^11.2.1",
     "reqres": "^2.0.0",
     "sinon": "^3.2.1",
+    "standard": "^10.0.3",
     "supertest": "^3.0.0"
   },
   "ava": {
