--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "2.3.0",
+    "checkit": "^0.7.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "3.0.2",
