--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-register": "^6.26.0",
     "coveralls": "^2.13.1",
     "eslint": "^4.13.1",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
