--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs-extra": "4.0.2",
     "html-webpack-plugin": "2.30.1",
     "moment": "^2.19.4",
+    "moment-timezone": "^0.5.14",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
