--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "form-data": "^2.3.1",
     "jszip": "^3.1.5",
     "knex": "^0.13.0",
+    "moment": "^2.20.1",
     "multer": "^1.3.0",
     "node-pdftk": "^1.2.1",
     "nodemailer": "^4.4.0",
