--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "db:migrate": "knex --knexfile ./src/db/knexfile.js --cwd . migrate:latest",
     "db:seedprod": "knex --knexfile ./src/db/knexfile.js --cwd . seed:run --env production",
     "db:seed": "knex --knexfile ./src/db/knexfile.js --cwd . seed:run",
-    "db:remove": "rm ./src/db/grappa2db.sqlite",
-    "db:reset": "rm ./src/db/grappa2db.sqlite && knex --knexfile ./src/db/knexfile.js --cwd . migrate:latest && knex --knexfile ./src/db/knexfile.js --cwd . seed:run",
+    "db:reset": "knex --knexfile ./src/db/knexfile.js --cwd . migrate:rollback",
     "build": "BABEL_ENV=production babel --out-dir=dist index.js",
     "report": "nyc report --reporter=html",
     "lint": "eslint --ext .js . || true",
@@ -50,7 +49,6 @@
     "nodemailer": "^4.4.0",
     "pg": "^7.3.0",
     "request": "^2.83.0",
-    "sqlite3": "^3.1.12",
     "validator": "^9.2.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^9.0.4"
