--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ services:
 
 before_script:
   - psql -c 'create database grappa;' -U postgres
-  - psql -c 'drop schema public;' -U postgres
-  - psql -c 'create schema public;' -U postgres
+  - psql -c 'create schema grappa_test;' -U postgres grappa
 
 env:
   - DATABASE_URL=postgres://postgres@localhost/grappa
