--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "busboy": "^0.2.14",
     "checkit": "^0.7.0",
     "connect-session-knex": "^1.4.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-fileupload": "^0.3.0",
     "express-graceful-exit": "^0.4.0",
