--- a/package.json
+++ b/package.json
@@ -31,46 +31,46 @@
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.1",
-    "bookshelf": "^0.12.0",
+    "body-parser": "^1.18.2",
+    "bookshelf": "^0.12.1",
     "busboy": "^0.2.14",
     "checkit": "^0.7.0",
     "connect-session-knex": "^1.4.0",
     "dotenv": "^4.0.0",
-    "express": "^4.15.4",
-    "express-fileupload": "^0.3.0",
-    "express-graceful-exit": "^0.4.0",
+    "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
+    "express-graceful-exit": "^0.4.1",
     "express-session": "^1.15.6",
     "form-data": "^2.3.1",
     "jszip": "^3.1.5",
-    "knex": "^0.13.0",
+    "knex": "^0.14.2",
     "moment": "^2.20.1",
     "multer": "^1.3.0",
     "node-pdftk": "^1.2.1",
-    "nodemailer": "^4.4.0",
-    "pg": "^7.3.0",
+    "nodemailer": "^4.4.2",
+    "pg": "^7.4.1",
     "request": "^2.83.0",
-    "validator": "^9.2.0",
+    "validator": "^9.3.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^9.0.4"
   },
   "devDependencies": {
-    "ava": "^0.22.0",
+    "ava": "^0.24.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
-    "coveralls": "^2.13.1",
-    "eslint": "^4.13.1",
+    "coveralls": "^3.0.0",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "~1.12.0",
-    "nyc": "^11.2.1",
-    "reqres": "^2.0.0",
-    "sinon": "^3.2.1",
+    "nodemon": "^1.14.11",
+    "nyc": "^11.4.1",
+    "reqres": "^2.1.0",
+    "sinon": "^4.2.1",
     "standard": "^10.0.3",
     "supertest": "^3.0.0"
   },
