--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodemailer": "^4.4.2",
     "pg": "^7.4.1",
     "request": "^2.83.0",
+    "utf8": "^3.0.0",
     "validator": "^9.3.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^9.0.4"
