--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "request": "^2.83.0",
     "utf8": "^3.0.0",
     "validator": "^9.3.0",
+    "winston": "^3.0.0-rc1",
+    "winston-daily-rotate-file": "^1.7.2",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^9.0.4"
   },
