--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bookshelf": "^0.12.1",
     "busboy": "^0.2.14",
