break tests by introducing concurrency

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test nyc ava -s -t",
+    "test": "NODE_ENV=test nyc ava",
     "start": "NODE_ENV=development nodemon index.js",
     "start:win": "nodemon index.js",
     "start:prod": "knex --knexfile ./src/db/knexfile.js --cwd . migrate:latest; NODE_ENV=production node index.js",
@@ -86,10 +86,10 @@
       "**/*.{js,jsx}",
       "!dist/**/*"
     ],
-    "concurrency": 0,
+    "concurrency": 4,
     "failFast": true,
-    "failWithoutAssertions": false,
-    "tap": false,
+    "failWithoutAssertions": true,
+    "tap": true,
     "powerAssert": false,
     "require": [
       "babel-register"
