--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_script:
 env:
   - DATABASE_URL=postgres://postgres@localhost/grappa
 
+script: npm run test-tap
+
 after_success:
  - "./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls"
 
