--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "file-loader": "1.1.6",
     "fs-extra": "5.0.0",
     "html-webpack-plugin": "2.30.1",
-    "lodash-es": "^4.17.5",
+    "lodash": "^4.17.5",
     "moment": "^2.19.4",
     "moment-timezone": "^0.5.14",
     "object-assign": "4.1.1",
@@ -49,6 +49,7 @@
   "devDependencies": {
     "ava": "^0.25.0",
     "babel-eslint": "^8.2.1",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "coveralls": "^3.0.0",
