--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "semantic-ui-react": "^0.78.1",
     "style-loader": "0.20.1",
     "sw-precache-webpack-plugin": "0.11.4",
