--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OhtuGrappa2/back-grappa2.git"
+    "url": "git+https://github.com/UniversityOfHelsinkiCS/back-grappa2"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/OhtuGrappa2/back-grappa2/issues"
+    "url": "https://github.com/UniversityOfHelsinkiCS/back-grappa2/issues"
   },
-  "homepage": "https://github.com/OhtuGrappa2/back-grappa2#readme",
+  "homepage": "https://github.com/UniversityOfHelsinkiCS/back-grappa2#readme",
   "dependencies": {
-    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
@@ -37,46 +36,46 @@
     "busboy": "^0.2.14",
     "checkit": "^0.7.0",
     "connect-session-knex": "^1.4.0",
-    "dotenv": "^4.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "express-graceful-exit": "^0.4.1",
     "express-session": "^1.15.6",
-    "form-data": "^2.3.1",
+    "form-data": "^2.3.2",
     "jszip": "^3.1.5",
-    "knex": "^0.14.2",
+    "knex": "^0.14.4",
     "moment": "^2.20.1",
     "multer": "^1.3.0",
-    "node-pdftk": "^1.2.1",
-    "nodemailer": "^4.4.2",
+    "node-pdftk": "^1.2.2",
+    "nodemailer": "^4.6.0",
     "pg": "^7.4.1",
     "request": "^2.83.0",
     "utf8": "^3.0.0",
-    "validator": "^9.3.0",
+    "validator": "^9.4.1",
     "winston": "^3.0.0-rc1",
     "winston-daily-rotate-file": "^1.7.2",
     "xml2js": "^0.4.19",
-    "xmlbuilder": "^9.0.4"
+    "xmlbuilder": "^9.0.7"
   },
   "devDependencies": {
     "apidoc": "^0.17.6",
-    "ava": "^0.24.0",
+    "ava": "^0.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "coveralls": "^3.0.0",
-    "eslint": "^4.16.0",
+    "eslint": "^4.18.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "^1.14.11",
-    "nyc": "^11.4.1",
+    "nodemon": "^1.17.1",
+    "nyc": "^11.5.0",
     "reqres": "^2.1.0",
-    "sinon": "^4.2.1",
-    "standard": "^10.0.3",
+    "sinon": "^4.4.2",
+    "standard": "^11.0.0",
     "supertest": "^3.0.0",
     "tap-nyan": "^1.1.0"
   },
