--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-graceful-exit": "^0.4.1",
     "express-session": "^1.15.6",
     "form-data": "^2.3.1",
+    "jsonwebtoken": "^8.1.1",
     "jszip": "^3.1.5",
     "knex": "^0.14.2",
     "moment": "^2.20.1",
