--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
 
 env:
   - DATABASE_URL=postgres://postgres@localhost/grappa
+  - CONSOLE_OUTPUT=true
 
 script: npm run test-tap
 
