--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ before_script:
   - psql -c 'create schema grappa_test;' -U postgres grappa
 
 env:
-  - DATABASE_URL=postgres://postgres@localhost/grappa
-  - CONSOLE_OUTPUT=true
+  - DATABASE_URL=postgres://postgres@localhost/grappa CONSOLE_OUTPUT=true
 
 script: npm run test-tap
 
