Add missing env parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - psql -c 'create schema grappa_test;' -U postgres grappa
 
 env:
-  - DATABASE_URL=postgres://postgres@localhost/grappa CONSOLE_OUTPUT=true
+  - DATABASE_URL=postgres://postgres@localhost/grappa CONSOLE_OUTPUT=true TOKEN_SECRET=salainen_token
 
 script: npm run test-tap
 
