--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-fileupload": "^0.4.0",
     "express-graceful-exit": "^0.4.1",
     "form-data": "^2.3.2",
+    "husky": "^0.14.3",
     "jsonwebtoken": "^8.1.1",
     "jszip": "^3.1.5",
     "knex": "^0.14.4",
@@ -98,5 +99,10 @@
   "apidoc": {
     "name": "Grappa backend",
     "url": "https://grappa.cs.helsinki.fi/v2api/"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
