--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "express-fileupload": "^0.4.0",
     "express-graceful-exit": "^0.4.1",
     "form-data": "^2.3.2",
-    "husky": "^0.14.3",
+    "husky": "^0.15.0-rc.8",
     "jsonwebtoken": "^8.1.1",
     "jszip": "^3.1.5",
     "knex": "^0.14.4",
@@ -102,7 +102,7 @@
   },
   "husky": {
     "hooks": {
-      "prepush": "npm test"
+      "pre-push": "npm test"
     }
   }
 }
