--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-loader": "2.1.0",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
+    "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-datepicker": "^1.1.0",
     "react-dom": "^16.2.0",
