--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bookshelf": "^0.12.1",
     "busboy": "^0.2.14",
     "checkit": "^0.7.0",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
