fixed API path, Jami says all is good

--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
     "webpack-dev-server": "2.11.1"
   },
   "scripts": {
-    "start": "API_URL=http://localhost:3100 node scripts/start.js",
-    "start:dev": "REACT_APP_DEVTOOLS=1 API_URL=http://localhost:3100 node scripts/start.js",
-    "start:win": "set API_URL=http://localhost:3100&&node scripts/start.js",
-    "build": "API_URL=api/ node scripts/build.js",
+    "start": "REACT_APP_API_URL=http://localhost:3100 node scripts/start.js",
+    "start:dev": "REACT_APP_DEVTOOLS=1 REACT_APP_API_URL=http://localhost:3100 node scripts/start.js",
+    "start:win": "set REACT_APP_API_URL=http://localhost:3100&&node scripts/start.js",
+    "build": "REACT_APP_API_URL=api/ node scripts/build.js",
     "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 nyc ava -t",
     "test:win": "ava",
     "report": "nyc report --reporter=html",
