--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jszip": "^3.1.5",
     "knex": "^0.14.4",
     "moment": "^2.20.1",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "node-pdftk": "^1.2.2",
     "nodemailer": "^4.6.0",
@@ -54,7 +55,8 @@
     "request": "^2.83.0",
     "utf8": "^3.0.0",
     "validator": "^9.4.1",
-    "winston": "^3.0.0-rc1",
+    "winston": "^2.4.2",
+    "winston-log2gelf": "^1.6.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^9.0.7"
   },
