--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-loader": "1.1.6",
     "fs-extra": "5.0.0",
     "html-webpack-plugin": "2.30.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.19.4",
     "object-assign": "4.1.1",
