--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "multer": "^1.3.0",
     "node-pdftk": "^1.2.2",
     "nodemailer": "^4.6.0",
+    "pdfkit": "^0.8.3",
     "pg": "^7.4.1",
     "raven": "^2.6.0",
     "request": "^2.83.0",
     "utf8": "^3.0.0",
+    "uuid": "^3.2.1",
     "validator": "^9.4.1",
     "winston": "^2.4.2",
     "winston-log2gelf": "^1.6.0",
