--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/UniversityOfHelsinkiCS/back-grappa2#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.3",
