--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "utf8": "^3.0.0",
     "uuid": "^3.3.2",
     "validator": "^10.9.0",
-    "winston": "^2.4.4",
+    "winston": "^3.2.1",
     "winston-log2gelf": "^2.3.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^10.1.1"
@@ -78,8 +78,7 @@
     "reqres": "^2.1.0",
     "sinon": "^4.5.0",
     "standard": "^11.0.1",
-    "supertest": "^3.3.0",
-    "tap-nyan": "^1.1.0"
+    "supertest": "^3.3.0"
   },
   "ava": {
     "files": [
