Remove prorammes from grader request list where user is already grader

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -106,7 +106,7 @@
   },
   "proxy": {
     "/api": {
-      "target": "http://localhost:3100",
+      "target": "http://grappaback:3100",
       "pathRewrite": {
         "^/api": "",
         "^/v2/api": ""
