Remove fields related to old grading from add new thesis view

--- a/.github/workflows/staging-backend.yml
+++ b/.github/workflows/staging-backend.yml
@@ -3,7 +3,7 @@ name: Release staging backend
 on:
   push:
     branches: 
-      - main
+      - trunk
     paths:
       - 'backend/**'
       - '.github/workflows/staging-backend.yml'
