--- a/.github/workflows/staging-frontend.yml
+++ b/.github/workflows/staging-frontend.yml
@@ -29,5 +29,31 @@ jobs:
           push: true
           tags: toska/front-grappa2:staging
           build-args: |
+            NODE_ENV=staging
             BASE_PATH=/staging/
             GIT_SHA=${{ github.sha }}
+
+  sentry-release:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Pull image and create a container
+        run: docker create --name front-grappa2 toska/front-grappa2:staging
+
+      - name: Copy assets from the container
+        run: docker cp grappa/frontend:/usr/src/app/build ./build
+
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_URL: sentry.cs.helsinki.fi
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: toska
+          SENTRY_PROJECT: grappa
+        with:
+          environment: staging
+          sourcemaps: './build/static/js'
+          url_prefix: '~/v2/static/js'
