--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/UniversityOfHelsinkiCS/back-grappa2#readme",
   "dependencies": {
+    "@sentry/node": "^6.4.1",
     "axios": "^0.19.2",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
@@ -50,7 +51,6 @@
     "nodemailer": "^4.6.8",
     "pdfkit": "^0.8.3",
     "pg": "^7.6.1",
-    "raven": "^2.6.4",
     "request": "^2.88.0",
     "utf8": "^3.0.0",
     "uuid": "^3.3.2",
