--- a/.github/workflows/staging-frontend.yml
+++ b/.github/workflows/staging-frontend.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
-          SENTRY_URL: sentry.cs.helsinki.fi
+          SENTRY_URL: https://sentry.cs.helsinki.fi
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: toska
           SENTRY_PROJECT: grappa
