--- a/.github/workflows/staging-backend.yml
+++ b/.github/workflows/staging-backend.yml
@@ -29,3 +29,18 @@ jobs:
           tags: toska/back-grappa2:staging
           build-args: |
             GIT_SHA=${{ github.sha }}
+  sentry-release:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_URL: https://sentry.cs.helsinki.fi
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: toska
+          SENTRY_PROJECT: grappa
+        with:
+          environment: staging
+          set_commits: 'skip'
