--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .js src || true"
   },
   "dependencies": {
-    "@sentry/browser": "^6.4.1",
+    "@sentry/react": "^6.4.1",
     "@sentry/tracing": "^6.4.1",
     "autoprefixer": "7.2.5",
     "axios": "^0.17.1",
