--- a/backend/package.json
+++ b/backend/package.json
@@ -56,6 +56,7 @@
     "uuid": "^3.3.2",
     "validator": "^10.9.0",
     "winston": "^3.2.1",
+    "winston-gelf-transporter": "^1.0.2",
     "winston-log2gelf": "^2.3.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^10.1.1"
